# lexical_bool

./: Cargo.toml  README.md
src/: lib.rs
