[package]
name = "lexical_bool"
version = "0.1.1"
authors = ["museun <museun@outlook.com>"]
edition = "2018"
readme = "README.md"
license = "0BSD"
keywords = [ "bool" ]
description = "parse arbitrary strings as bools"
repository = "https://github.com/museun/lexical_bool"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
once_cell = "0.2.3"
